replaced Task 1 image with s screenshot

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -56,7 +56,7 @@
 		This approach thus only calculates the "inside-ness" of pixels within the bounding box that contains the triangle, rather than the entire frame. From the top left to bottom right, two for loops iterate every sample point starting at the top line, where it should contain the top vertex or edge of the triangle, then iterate the next row of pixels until it reaches the bottom edge or vertex. The for loops do not account for pixels beyond since we define our start and end conditions to be those maximum boundaries.
 
 		<figure>
-			<img src="Task 1 Triangles" alt="Task 1" style="width:50%" />
+			<img src="screenshot_2-17_18-21-15.png" alt="Task 1 Triangles" style="width:50%" />
 			<figcaption>Here's what the triangles come out like!</figcaption>
 		</figure>
 
