--- a/hw1/index.html
+++ b/hw1/index.html
@@ -157,7 +157,42 @@
 			</div>
 
 			<h2>Task 6: "Level Sampling" with mipmaps for texture mapping</h2>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Task 6 takes what we learned from Task 5, and introduces level sampling alongside our pixel sampling parameters. The defaut "Level Zero" approach always renders using the full resolution texture map of mipmap level 0. However, when we want to precompute lower resolution texture maps, we initiate the get_level function which computes a mipmap level based on the relative sizing, in order of how many times the resolution has been halved. Therefore, when "Level Nearest" is selected where we round off the level computed by the get_level function and sample from that mipmap level. Otherwise, trilinear filtering takes it a step further, and takes the two adjacent mipmap levels from the level returned by get_level, the nearest above and below levels, and interpolates the two together to choose the color to return.
+
+			<br>
+
+			Level 0 sampling is the fastest as it takes no extra computing, and also uses the least memory since it only uses the level 0 mipmap. However, it has the highest aliasing due to direct texel selection even if there are distorted pixels. Nearest level sampling is slightly slower than the previous due to the mipmap level calculations based on the uv offsets, and also has some extra memory usage to generate the mipmaps, but with some anti-aliasing for triangles that are smaller and make be distorted. Beyond that, trilinear filtering is the slowest due to the calculations of two adjacent mipmap levels, but doesn't require extra memory than what is already calculated by nearest level, and has the best anti-aliasing as it also blends the textures between two mipmap levels where there may be sharp warps.'
+
+			<div style="display: flex; flex-direction: column; align-items: center;">
+				<table style="width: 100%; text-align: center; border-collapse: collapse;">
+					<tr>
+						<td style="text-align: center;">
+							<img src="T6 L0PN" width="400px" />
+							<figcaption>Level Zero, Nearest Pixel Sampling.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="T6 L0PL" width="400px" />
+							<figcaption>Level Zero, Bilinear Pixel Sampling.</figcaption>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: center;">
+							<img src="T6 LNPN" width="400px" />
+							<figcaption>Nearest Level, Nearest Pixel Sampling.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="T6 LNPL" width="400px" />
+							<figcaption>Nearest Level, Bilinear Pixel Sampling.</figcaption>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: center;">
+							<img src="T6 LBPL" width="400px" />
+							<figcaption>Trilinear sampling, Linear Level, Bilinear Pixel Sampling.</figcaption>
+						</td>
+					</tr>
+				</table>
+			</div>
 
 			<h2>(Optional) Task 7: Extra Credit - Draw Something Creative!</h2>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
