forgot to add .png to my images oops

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -167,27 +167,27 @@
 				<table style="width: 100%; text-align: center; border-collapse: collapse;">
 					<tr>
 						<td style="text-align: center;">
-							<img src="T6 L0PN" width="400px" />
+							<img src="T6 L0PN.png" width="400px" />
 							<figcaption>Level Zero, Nearest Pixel Sampling.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="T6 L0PL" width="400px" />
+							<img src="T6 L0PL.png" width="400px" />
 							<figcaption>Level Zero, Bilinear Pixel Sampling.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="T6 LNPN" width="400px" />
+							<img src="T6 LNPN.png" width="400px" />
 							<figcaption>Nearest Level, Nearest Pixel Sampling.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="T6 LNPL" width="400px" />
+							<img src="T6 LNPL.png" width="400px" />
 							<figcaption>Nearest Level, Bilinear Pixel Sampling.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="T6 LBPL" width="400px" />
+							<img src="T6 LBPL.png" width="400px" />
 							<figcaption>Trilinear sampling, Linear Level, Bilinear Pixel Sampling.</figcaption>
 						</td>
 					</tr>
