I renamed the image...

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -187,7 +187,7 @@
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="T6 LBPL.png" width="400px" />
+							<img src="T6 LLPL.png" width="400px" />
 							<figcaption>Trilinear sampling, Linear Level, Bilinear Pixel Sampling.</figcaption>
 						</td>
 					</tr>
