--- a/hw1/index.html
+++ b/hw1/index.html
@@ -119,7 +119,10 @@
 			</div>
 
 			<h2>Task 3: Transforms</h2>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			For this task, we used the transformations that we implemented to make our robot's head rotate and scale to the right size, in addition we applied a rotation to the right arm to try to make it look like the robot is waving!
+			
+			<img src="Robot.png" width="400px" />
+			<figcaption>Our Robot Waving :).</figcaption>
 
 			<h2>Task 4: Barycentric coordinates</h2>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
