--- a/hw1/index.html
+++ b/hw1/index.html
@@ -127,7 +127,10 @@
 
 
 			<h2>Task 4: Barycentric coordinates</h2>
-			Barycentric coordinates are a way to select a point on a triangle of RGB where the point is unique in the sense that its location on the triangle has a unique rgb value, each point in the triangle has a unique rgb value that can be represented with barycentric coordinates. 
+			Barycentric coordinates are a way to select a point on a triangle of RGB where the point is unique in the sense that its location on the triangle has a unique rgb value, each point in the triangle has a unique rgb value that can be represented with barycentric coordinates using alpha, beta and gamma, for example if a point had a coordinate of alpha = 1, beta = 0, and gamma = 0, the sampled point could be an all red point since barycentric coordinates let us sample for a color or texture. 
+				<figure>
+					<img src="Barycentric.png" width="400px" />
+				</figure>
                 <figure>
                     <img src="RainbowWheel.png" width="400px" />
                     <figcaption>Here's what the color wheel looks like with default viewing parameters and sampling rate 1!</figcaption>
