--- a/hw1/index.html
+++ b/hw1/index.html
@@ -32,11 +32,11 @@
 
 			<br>
 
-			Link to webpage: (TODO) <a href="https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw1/index.html">Webpage</a>
+			Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw1/index.html">Webpage</a>
 
 			<br>
 
-			Link to GitHub repository: (TODO) <a href="https://github.com/cal-cs184-student/hw-webpages-pork-chopped-website">Repo</a>
+			Link to GitHub repository: <a href="https://github.com/cal-cs184-student/hw-webpages-pork-chopped-website">Repo</a>
 
 			<figure>
 				<img src="lion.jpg" alt="Lion" style="width:50%" />
