--- a/hw2/index.html
+++ b/hw2/index.html
@@ -60,7 +60,7 @@
 				<table style="width: 100%; text-align: center; border-collapse: collapse;">
 					<tr>
 						<td style="text-align: center;">
-							<img src="bezier1.PNG" width="400px" />
+							<img src="Bezier1.PNG" width="400px" />
 							<figcaption>Caption goes here.</figcaption>
 						</td>
 						<td style="text-align: center;">
