--- a/hw2/index.html
+++ b/hw2/index.html
@@ -128,8 +128,26 @@
 
 
 			<h3>Part 4: Edge flip</h3>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
+			<div style="display: flex; flex-direction: column; align-items: center;">
+				<table style="width: 100%; text-align: center; border-collapse: collapse;">
+					<tr>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task4 Unflipped.png" width="400px" />
+							<figcaption>No Flips.</figcaption>
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 One Flip.png" width="400px" />
+							<figcaption>One Flip.</figcaption>
+						</td>
+						<td style="text-align: center;">
+							<img src="CS184 HW2 Task4 Several Flip.png" width="400px" />
+							<figcaption>Several Flip.</figcaption>
+						</td>
+					</tr>
+				</table>
+			</div>
 			<h3>Part 5: Edge split</h3>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
