--- a/hw2/index.html
+++ b/hw2/index.html
@@ -138,7 +138,7 @@
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="CS184 HW2 One Flip.png" width="400px" />
+							<img src="CS184 HW2 Task4 One Flip.png" width="400px" />
 							<figcaption>One Flip.</figcaption>
 						</td>
 						<td style="text-align: center;">
